# Aluminum

./: Ok.py  cargo.toml  comptree.js  nimble.json  pluck.py  pyproject.toml  set-sv.conf  tooltips.nim
.github/workflows/: python-package.yml
JDK/: sessions.rs  verification.rs
JDK/cssparser/: lib.rs
JDK/html_parser/: lib.rs
Resources/src/: IconLoader.AppIcon.py
scripts/builds/: CookieJar_Initializer.py  util.install.rs
scripts/builds/Locks/: config.json
